<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ck_real_flag_data" Id="{327caf24-3a87-427a-a6b8-df6bae2c52a6}">
    <Declaration><![CDATA[//struct to return values from POUS->Vision_functions->wr_real_value f
TYPE ck_real_flag_data :
STRUCT
	Flag : BOOL;
	Value : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>